--- a/docker/application/Dockerfile
+++ b/docker/application/Dockerfile
@@ -10,4 +10,6 @@ RUN apt-get update && apt-get install -y \
 RUN docker-php-ext-configure gd --with-freetype --with-jpeg && \
     docker-php-ext-install -j$(nproc) pdo_mysql ftp zip intl gd bcmath opcache pcntl soap
 
+RUN a2enmod rewrite
+
 COPY ./000-default.conf /etc/apache2/sites-available/
