create database config

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,9 @@ DISCOVERY_CACHE=false
 # Overwrite default log paths (null = default)
 DEBUG_LOG_PATH=null
 SERVER_LOG_PATH=null
+
+DATABASE_HOST=localhost
+DATABASE_PORT=3306
+DATABASE_USER=user
+DATABASE_PASSWORD=password
+DATABASE_NAME=database
