--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 ENVIRONMENT=local
 
 # The base URI that's used for all generated URIs
-BASE_URI=http://localhost
+BASE_URI=http://app.localhost:8080
 
 # Setting to `false` force-disable internal caches.
 INTERNAL_CACHES=true
@@ -11,10 +11,10 @@ INTERNAL_CACHES=true
 DISCOVERY_CACHE=false
 
 # Overwrite default log paths (null = default)
-DEBUG_LOG_PATH=null
-SERVER_LOG_PATH=null
+DEBUG_LOG_PATH=/var/www/app/log/debug
+SERVER_LOG_PATH=/var/www/app/log/server
 
-DATABASE_HOST=localhost
+DATABASE_HOST=database
 DATABASE_PORT=3306
 DATABASE_USER=user
 DATABASE_PASSWORD=password
