--- a/docker/application/Dockerfile
+++ b/docker/application/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.4-apache
+FROM php:8.4-fpm
 
 # Composer
 COPY --from=composer:2.8 /usr/bin/composer /usr/bin/composer
@@ -9,7 +9,3 @@ RUN apt-get update && apt-get install -y \
 # install php extensions
 RUN docker-php-ext-configure gd --with-freetype --with-jpeg && \
     docker-php-ext-install -j$(nproc) pdo_mysql ftp zip intl gd bcmath opcache pcntl soap
-
-RUN a2enmod rewrite
-
-COPY ./000-default.conf /etc/apache2/sites-available/
