--- a/docker/proxy/default.conf
+++ b/docker/proxy/default.conf
@@ -3,11 +3,17 @@ server {
     server_name app.localhost;
 
     location / {
-      proxy_pass http://application:80;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    location ~ \.php$ {
+        root /var/www/app/public;
+
+        include fastcgi_params;
+        fastcgi_index           index.php;
+        fastcgi_param           SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param           DOCUMENT_ROOT $realpath_root;
+        fastcgi_pass            application:9000;
     }
 }
 
