--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   proxy:
     image: nginx:alpine
     volumes:
-      - ./docker/proxy/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/proxy/tempest.conf:/etc/nginx/conf.d/tempest.conf
       - ./public:/var/www/app/public
     ports:
       - "8080:80"
