--- a/docker/proxy/tempest.conf
+++ b/docker/proxy/tempest.conf
@@ -6,6 +6,7 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    # pass the PHP scripts to FastCGI server 'application' listening on application:9000
     location ~ \.php$ {
         root /var/www/app/public;
 
@@ -15,6 +16,15 @@ server {
         fastcgi_param           DOCUMENT_ROOT $realpath_root;
         fastcgi_pass            application:9000;
     }
+
+    #
+    #location ~ \.php$ {
+    #    root           html;
+    #    fastcgi_pass   127.0.0.1:9000;
+    #    fastcgi_index  index.php;
+    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
+    #    include        fastcgi_params;
+    #}
 }
 
 server {
