--- a/docker/proxy/tempest.conf
+++ b/docker/proxy/tempest.conf
@@ -3,6 +3,8 @@ server {
     server_name app.localhost;
 
     location / {
+        index index.php index.html index.htm;
+        root   /var/www/app/public;
         try_files $uri $uri/ /index.php?$query_string;
     }
 
@@ -16,15 +18,6 @@ server {
         fastcgi_param           DOCUMENT_ROOT $realpath_root;
         fastcgi_pass            application:9000;
     }
-
-    #
-    #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
 }
 
 server {
