--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,13 @@
     "name": "tempest/sample",
     "version": "1.0.0",
     "require": {
-        "tempest/framework": "2.0"
+        "tempest/framework": "2.14"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.2 || ^11.5.15",
         "symfony/var-dumper": "^7.2.3",
         "carthage-software/mago": "^0.26.1",
-        "rector/rector": "2.2.5"
+        "rector/rector": "2.2.14"
     },
     "autoload": {
         "psr-4": {
@@ -21,12 +21,7 @@
             "Tests\\Tempest\\": "vendor/brendt/tempest/tests/"
         }
     },
-    "authors": [
-        {
-            "name": "Brent Roose",
-            "email": "brendt@stitcher.io"
-        }
-    ],
+    "authors": [],
     "scripts": {
         "post-create-project-cmd": [
             "@php ./vendor/bin/tempest install framework -f",
