update composer scripts.

--- a/composer.json
+++ b/composer.json
@@ -31,12 +31,12 @@
             "@php ./vendor/bin/tempest discovery:generate --no-interaction"
         ],
         "phpunit": "vendor/bin/phpunit --display-warnings --display-skipped --display-deprecations --display-errors --display-notices",
-        "mago:fmt": "vendor/bin/mago fmt",
-        "mago:lint": "vendor/bin/mago lint --fix && vendor/bin/mago lint",
+        "format": "vendor/bin/mago fmt",
+        "lint": "vendor/bin/mago lint --fix && vendor/bin/mago lint",
         "qa": [
-            "composer mago:fmt",
+            "composer format",
             "composer phpunit",
-            "composer mago:lint"
+            "composer lint"
         ]
     },
     "license": "MIT",
