add composer dependencies php-extensions.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # Possible values: local, staging, production, ci, testing, other
 ENVIRONMENT=local
+# Generate the key. `php tempest key:generate`
+SIGNING_KEY=
 
 # The base URI that's used for all generated URIs
 BASE_URI=http://app.localhost:8080
